@@ -1,3 +1,5 @@
+import com.diffplug.spotless.LineEnding
+
 plugins {
     id 'application'
     id 'java'
@@ -50,6 +52,8 @@ dependencies {
     testImplementation(
             'org.junit.jupiter:junit-jupiter:5.6.0',
             'org.testfx:testfx-junit5:4.0.16-alpha',
+            'org.mockito:mockito-core:3.3.3',
+            'org.mockito:mockito-junit-jupiter:3.3.3',
     )
     testRuntimeOnly(
             'org.testfx:openjfx-monocle:jdk-11+26',
@@ -126,15 +130,7 @@ compileJava.dependsOn 'spotlessApply'
 spotless {
     java {
         googleJavaFormat()
+
+        lineEndings(LineEnding.PLATFORM_NATIVE)
     }
-}
-run {
-    jvmArgs = ['--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
-               '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
-               '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
-               '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
-               '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
-               '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
-               '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
-    ]
 }
